# GeneralsGameCode

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
GeneralsMD/Code/: CMakeLists.txt
GeneralsMD/Code/CompatLib/Source/: d3dx8_compat.cpp  string_compat.cpp
GeneralsMD/Code/GameEngine/Include/Common/: Language.h
GeneralsMD/Code/GameEngine/Source/Common/: GameEngine.cpp
GeneralsMD/Code/GameEngine/Source/Common/INI/: INI.cpp  INIMapCache.cpp
GeneralsMD/Code/GameEngine/Source/GameClient/: GameText.cpp  MapUtil.cpp
GeneralsMD/Code/GameEngine/Source/GameClient/GUI/ControlBar/: ControlBar.cpp
GeneralsMD/Code/GameEngine/Source/GameClient/GUI/DisconnectMenu/: DisconnectMenu.cpp
GeneralsMD/Code/GameEngine/Source/GameClient/GUI/GUICallbacks/Menus/: MainMenu.cpp  OptionsMenu.cpp  SkirmishGameOptionsMenu.cpp
GeneralsMD/Code/GameEngine/Source/GameLogic/Object/: PartitionManager.cpp
GeneralsMD/Code/GameEngine/Source/GameLogic/Object/Contain/: OpenContain.cpp  TransportContain.cpp
GeneralsMD/Code/GameEngine/Source/GameLogic/Object/Update/AIUpdate/: RailroadGuideAIUpdate.cpp
GeneralsMD/Code/GameEngine/Source/GameNetwork/: FirewallHelper.cpp  GameInfo.cpp
GeneralsMD/Code/GameEngine/Source/GameNetwork/GameSpy/: MainMenuUtils.cpp
GeneralsMD/Code/GameEngine/Source/GameNetwork/GameSpy/Thread/: BuddyThread.cpp  PeerThread.cpp
GeneralsMD/Code/GameEngineDevice/Include/SDL3Device/GameClient/: SDL3Keyboard.h  SDL3Mouse.h
GeneralsMD/Code/GameEngineDevice/Include/StdDevice/Common/: StdLocalFileSystem.h
GeneralsMD/Code/GameEngineDevice/Source/OpenALAudioDevice/: OpenALAudioCache.cpp  OpenALAudioManager.cpp
GeneralsMD/Code/GameEngineDevice/Source/SDL3Device/GameClient/: SDL3Keyboard.cpp  SDL3Mouse.cpp
GeneralsMD/Code/GameEngineDevice/Source/StdDevice/Common/: StdLocalFileSystem.cpp
GeneralsMD/Code/Libraries/Source/Debug/: debug_debug.cpp
GeneralsMD/Code/Libraries/Source/WWVegas/WW3D2/: dx8wrapper.cpp
GeneralsMD/Code/Libraries/Source/WWVegas/WWLib/: cpudetect.cpp  intrin_compat.h
GeneralsMD/Code/Tools/PATCHGET/: CHATAPI.CPP  DownloadManager.h
