# z stands for Zero Hour, i stands for Interface
add_library(zi_gameengine INTERFACE)
add_library(zi_gameengine_include INTERFACE)
add_library(zi_gameenginedevice_include INTERFACE)
add_library(zi_libraries_include INTERFACE)
add_library(zi_libraries_source INTERFACE)
add_library(zi_libraries_source_wwvegas INTERFACE)
add_library(zi_libraries_source_wwvegas_ww3d2 INTERFACE)
add_library(zi_libraries_source_wwvegas_wwdebug INTERFACE)
add_library(zi_libraries_source_wwvegas_wwlib INTERFACE)
add_library(zi_libraries_source_wwvegas_wwmath INTERFACE)
add_library(zi_libraries_source_wwvegas_wwsaveload INTERFACE)
add_library(zi_main INTERFACE)

target_include_directories(zi_gameengine INTERFACE "GameEngine")
target_include_directories(zi_gameengine_include INTERFACE "GameEngine/Include")
target_include_directories(zi_gameenginedevice_include INTERFACE "GameEngineDevice/Source")
target_include_directories(zi_libraries_include INTERFACE "Libraries/Include")
target_include_directories(zi_libraries_source INTERFACE "Libraries/Source")
target_include_directories(zi_libraries_source_wwvegas INTERFACE "Libraries/Source/WWVegas")
target_include_directories(zi_libraries_source_wwvegas_ww3d2 INTERFACE "Libraries/Source/WWVegas/WW3D2")
target_include_directories(zi_libraries_source_wwvegas_wwdebug INTERFACE "Libraries/Source/WWVegas/WWDebug")
target_include_directories(zi_libraries_source_wwvegas_wwlib INTERFACE "Libraries/Source/WWVegas/WWLib")
target_include_directories(zi_libraries_source_wwvegas_wwmath INTERFACE "Libraries/Source/WWVegas/WWMath")
target_include_directories(zi_libraries_source_wwvegas_wwsaveload INTERFACE "Libraries/Source/WWVegas/WWSaveLoad")
target_include_directories(zi_main INTERFACE "Main")

if(WIN32)
    add_subdirectory(extern/d3d8)
    add_subdirectory(extern/GamespySDK)
    add_subdirectory(extern/gnu_regex)
endif()

add_subdirectory(Libraries)
add_subdirectory(GameEngine)
